--- a/FileBrowser/MainWindow.xaml
+++ b/FileBrowser/MainWindow.xaml
@@ -4,25 +4,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileBrowser"
-
         xmlns:properties="clr-namespace:FileBrowser.Properties"
+        xmlns:controls="clr-namespace:FileBrowser.Controls"
+
+
         mc:Ignorable="d"
         xml:lang="en-US"
-        Title="MainWindow" Height="600" Width="800">
+        
+        Height="600" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical" Style="{StaticResource Menu}">
-            <Button Style="{StaticResource MenuButton}" Content="{x:Static properties:Resources.MenuButtonRefresh}"/>
+            <Button Style="{StaticResource MenuButton}" Name="MenuButtonRefresh" Content="{x:Static properties:Resources.MenuButtonRefresh}" Click="MenuButtonRefresh_OnClick"/>
             <Button Style="{StaticResource MenuButton}" Content="{x:Static properties:Resources.MenuButtonSettings}"/>
             <Button Style="{StaticResource MenuButton}" Content="{x:Static properties:Resources.MenuButtonHelp}"/>
             <Button Style="{StaticResource MenuButton}" Content="{x:Static properties:Resources.MenuButtonAbout}"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-
+            <StackPanel Orientation="Horizontal">
+                <Button>Epic</Button>
+                <Button>Not epic</Button>
+            </StackPanel>
+            <controls:FileBrowserTreeView x:Name="FileBrowserTreeView"/>
         </StackPanel>
 
     </Grid>
