--- a/FileBrowser/App.xaml
+++ b/FileBrowser/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FileBrowser"
-             StartupUri="MainWindow.xaml">
+             Startup="StartUp">
     <Application.Resources>
 
 
